--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
 	        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> <b class="caret"></b></a>
 	        <ul class="dropdown-menu">
 	        	<li><%= link_to "Invite", new_admin_invitation_path %></li>
+	        	<li><%= link_to "Review", secrets_compindex_path %></li>
+	        	<li role="presentation" class="divider"></li>
 			    <li><%= link_to "Logout", destroy_admin_session_path, method: :delete %></li>
 			</ul>
 		</li>
