--- a/app/views/secrets/index.html.erb
+++ b/app/views/secrets/index.html.erb
@@ -6,7 +6,7 @@
 <h4><%= s.rumor %></h4>
 	<% if Time.new.utc.year == s.created_at.to_s.split(/[^0-9]+/)[0].to_i%>
 			<% if Time.new.utc.month == s.created_at.to_s.split(/[^0-9]+/)[1].to_i %>
-				<% if Time.new.utc.day == s.created_at.to_s.split(/[^0-9]+/)[2].to_i %>
+				<% if Time.new.utc.day - s.created_at.to_s.split(/[^0-9]+/)[2].to_i < 2%>
 					<% if Time.new.utc.hour == s.created_at.to_s.split(/[^0-9]+/)[3].to_i %>
 						<% if Time.new.utc.min == s.created_at.to_s.split(/[^0-9]+/)[4].to_i %>
 						a few seconds ago
@@ -14,18 +14,26 @@
 						<%= Time.new.utc.min - s.created_at.to_s.split(/[^0-9]+/)[4].to_i %> minutes ago
 						<% end %>
 					<% else %>
-						<%= Time.new.utc.hour - s.created_at.to_s.split(/[^0-9]+/)[3].to_i %> hours ago
+						<% if Time.new.utc.day == s.created_at.to_s.split(/[^0-9]+/)[2].to_i %>
+							<%= Time.new.utc.hour - s.created_at.to_s.split(/[^0-9]+/)[3].to_i %> hours ago
+						<% else %>
+							<%= Time.new.utc.hour+24 - s.created_at.to_s.split(/[^0-9]+/)[3].to_i %> hours ago
+						<% end %>
 					<% end %>
+
 				<% else %>
 					<%= Time.new.utc.day - s.created_at.to_s.split(/[^0-9]+/)[2].to_i %> days ago
 				<% end %>
-			<% else %> <%= Time.new.utc.month - s.created_at.to_s.split(/[^0-9]+/)[1].to_i %> months ago
+			<% else %> 
+				<%= Time.new.utc.month - s.created_at.to_s.split(/[^0-9]+/)[1].to_i %> months ago
 			<% end %>
-		<% else %>
+	<% else %>
 		<%= Time.new.utc.year - s.created_at.to_s.split(/[^0-9]+/)[0].to_i %> years ago 
-		<% end %>
+	<% end %>
 <br></br>
 <% end %>
+
+<br></br>
 
 <%= link_to 'Open Source Your Secrets', new_secret_path, class: "btn btn-primary btn-block" %>
 
