--- a/app/views/secrets/compindex.html.erb
+++ b/app/views/secrets/compindex.html.erb
@@ -2,6 +2,7 @@
 
 
 <% @secrets.each do |s| %>
-<%= s.rumor %>  <%= link_to 'review to publish', edit_secret_path(s) %>
+<%= s.rumor %>  <%= link_to 'review to publish', edit_secret_path(s), :class =>"btn btn-info" %>
+ <%= link_to 'Delete', secret_path(s), method: :delete, data: {confirm: "Are you sure you want to delete this permanently?"}, :class =>"btn btn-danger" %>
 <br></br>
 <% end %>
