making text larger on mobile

--- a/app/views/secrets/index.html.erb
+++ b/app/views/secrets/index.html.erb
@@ -2,7 +2,11 @@
 
 <h2 class="text-center">anonies</h2>
 
+
 <% @secrets.each do |s| %>
+
+<div class = "row-fluid">
+
 <h4><%= s.rumor %></h4>
 	<% if Time.new.utc.year == s.created_at.to_s.split(/[^0-9]+/)[0].to_i%>
 			<% if Time.new.utc.month == s.created_at.to_s.split(/[^0-9]+/)[1].to_i %>
@@ -30,6 +34,8 @@
 	<% else %>
 		<%= Time.new.utc.year - s.created_at.to_s.split(/[^0-9]+/)[0].to_i %> years ago 
 	<% end %>
+</div>
+
 <br></br>
 <% end %>
 
