--- a/app/views/secrets/index.html.erb
+++ b/app/views/secrets/index.html.erb
@@ -3,6 +3,11 @@
 <h2 class="text-center">anonies</h2>
 
 
+
+<script>
+  getGeoLocation();
+</script>
+
 <% @secrets.each do |s| %>
 
 <div class = "row-fluid">
