--- a/app/views/secrets/new.html.erb
+++ b/app/views/secrets/new.html.erb
@@ -7,6 +7,7 @@
 	<%= s.text_area :rumor, label:'Anonymous Tip' %><br />
 	<%= s.hidden_field :approved, :value => false %><br />
 	<%= s.submit 'Submit', class: "btn btn-primary btn-block" %>
+	<%= s.hidden_field :locdata, :value => @lat_lng %><br />
 
 
 <% end %>
