added upvote downvote can delete from index

--- a/app/views/secrets/index.html.erb
+++ b/app/views/secrets/index.html.erb
@@ -1,4 +1,5 @@
-<div class="container-fluid col-md-10 col-md-offset-1">
+
+<div class="container-fluid col-md-10 col-md-offset-1" id="postbody">
 
 <h2 class="text-center">anonies</h2>
 
@@ -8,42 +9,85 @@
 <div class = "row-fluid">
 
 <h4><%= s.rumor %></h4>
+
+	<% @secretvotecount = Secretvote.where(:secret_id => s.id) %>
+	<% apple = 0 %>
+	<% @secretvotecount.each do |s| %>
+		<% if s.upvote == 1 %>
+			<% apple = apple + 1 %>
+		<% elsif s.downvote == 1 %>
+			<% apple = apple - 1 %>
+		<% end %>
+	<% end %>
+	<%= apple %> points
+
 	<% if Time.new.utc.year == s.created_at.to_s.split(/[^0-9]+/)[0].to_i%>
 			<% if Time.new.utc.month == s.created_at.to_s.split(/[^0-9]+/)[1].to_i %>
 				<% if Time.new.utc.day - s.created_at.to_s.split(/[^0-9]+/)[2].to_i < 2%>
 					<% if Time.new.utc.hour == s.created_at.to_s.split(/[^0-9]+/)[3].to_i %>
 						<% if Time.new.utc.min == s.created_at.to_s.split(/[^0-9]+/)[4].to_i %>
 						a few seconds ago
+						<% elsif Time.new.utc.min - s.created_at.to_s.split(/[^0-9]+/)[4].to_i < 2 %>
+						a minute ago
 						<% else %>
 						<%= Time.new.utc.min - s.created_at.to_s.split(/[^0-9]+/)[4].to_i %> minutes ago
 						<% end %>
 					<% else %>
 						<% if Time.new.utc.day == s.created_at.to_s.split(/[^0-9]+/)[2].to_i %>
+							<% if Time.new.utc.hour - s.created_at.to_s.split(/[^0-9]+/)[3].to_i <2 %>
+							an hour ago
+							<% else %>
 							<%= Time.new.utc.hour - s.created_at.to_s.split(/[^0-9]+/)[3].to_i %> hours ago
+							<% end %>
 						<% else %>
 							<%= Time.new.utc.hour+24 - s.created_at.to_s.split(/[^0-9]+/)[3].to_i %> hours ago
 						<% end %>
 					<% end %>
 
 				<% else %>
+					<% if Time.new.utc.day - s.created_at.to_s.split(/[^0-9]+/)[2].to_i <2 %>
+					yesterday
+					<% else %>
 					<%= Time.new.utc.day - s.created_at.to_s.split(/[^0-9]+/)[2].to_i %> days ago
+					<% end %>
 				<% end %>
 			<% else %> 
-				<%= Time.new.utc.month - s.created_at.to_s.split(/[^0-9]+/)[1].to_i %> months ago
+				<% if Time.new.utc.month - s.created_at.to_s.split(/[^0-9]+/)[1].to_i <2 %>
+					last month
+				<% else %>
+					<%= Time.new.utc.month - s.created_at.to_s.split(/[^0-9]+/)[1].to_i %> months ago
+				<% end %>
 			<% end %>
 	<% else %>
 		<%= Time.new.utc.year - s.created_at.to_s.split(/[^0-9]+/)[0].to_i %> years ago 
 	<% end %>
+
+
+
+	<%= link_to upvote_secret_path(s),:class =>"btn btn-xs btn-primary", method: :post do%>
+			<span class="glyphicon glyphicon-thumbs-up"></span>
+	<% end %>
+	<%= link_to downvote_secret_path(s),:class =>"btn btn-xs btn-primary", method: :post do%>
+			<span class="glyphicon glyphicon-thumbs-down"></span>
+	<% end %>
+
+	<%= link_to secret_path(s), method: :delete, data: {confirm: "Are you sure you wish to remove this contribution?"}, :class =>"btn-sm btn-danger" do%>
+		<span class="glyphicon glyphicon-trash"></span>
+	<% end %> 
+
 </div>
 
 <br></br>
 <% end %>
 
 <br></br>
-
-<%= link_to 'Open Source Your Secrets', new_secret_path, class: "btn btn-primary btn-block" %>
-
+</div>
+<div class="footer">
+	<%= link_to 'Open Source Your Secrets', new_secret_path, class: "btn btn-primary btn-block" %>
+</div>
 <br></br>
 
-</div>
+
+
+
 
