--- a/app/assets/stylesheets/acustom.css.scss
+++ b/app/assets/stylesheets/acustom.css.scss
@@ -1,5 +1,6 @@
 @import 'bootstrap';
 
+
 body{
 	font-family: 'Arimo', sans-serif;
 }
@@ -8,3 +9,20 @@ body{
     font-size:30px;
     }
 }
+
+#postbody{
+	height: 500px;
+	overflow: auto;
+	padding-bottom: 80px;
+}
+
+.footer{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width:100%;
+	height: 60px;
+}
+
+
+
