restyle up down vote

--- a/app/views/secrets/index.html.erb
+++ b/app/views/secrets/index.html.erb
@@ -3,13 +3,13 @@
 
 <h2 class="text-center">anonies</h2>
 
-
 <% @secrets.each do |s| %>
 
 <div class = "row-fluid">
 
 <h4><%= s.rumor %></h4>
 
+	<div class = "timecontainer">
 	<% @secretvotecount = Secretvote.where(:secret_id => s.id) %>
 	<% apple = 0 %>
 	<% @secretvotecount.each do |s| %>
@@ -61,19 +61,25 @@
 	<% else %>
 		<%= Time.new.utc.year - s.created_at.to_s.split(/[^0-9]+/)[0].to_i %> years ago 
 	<% end %>
+	</div>
 
-
-
-	<%= link_to upvote_secret_path(s),:class =>"btn btn-xs btn-primary", method: :post do%>
-			<span class="glyphicon glyphicon-thumbs-up"></span>
+	<div class = "votecontainer">
+	<%= link_to upvote_secret_path(s), class: "btn btn-link btn-block", method: :post do%>
+			<span class="glyphicon glyphicon-plus-sign"></span>
 	<% end %>
-	<%= link_to downvote_secret_path(s),:class =>"btn btn-xs btn-primary", method: :post do%>
-			<span class="glyphicon glyphicon-thumbs-down"></span>
-	<% end %>
+	</div>
 
-	<%= link_to secret_path(s), method: :delete, data: {confirm: "Are you sure you wish to remove this contribution?"}, :class =>"btn-sm btn-danger" do%>
-		<span class="glyphicon glyphicon-trash"></span>
+	<div class = "votecontainer">
+	<%= link_to downvote_secret_path(s), class: "btn btn-link btn-block", method: :post do%>
+			<span class="glyphicon glyphicon-minus-sign"></span>
+	<% end %>
+	</div>
+
+	<div class = "votecontainer">
+	<%= link_to secret_path(s), class: "btn btn-link btn-block", method: :delete, data: {confirm: "Don't abuse da power. You sure this post deserves sudden death?"} do%>
+		<span class="glyphicon glyphicon-remove-sign"></span>
 	<% end %> 
+	</div>
 
 </div>
 
