--- a/app/assets/stylesheets/acustom.css.scss
+++ b/app/assets/stylesheets/acustom.css.scss
@@ -4,11 +4,7 @@
 body{
 	font-family: 'Arimo', sans-serif;
 }
-@media screen and (max-width: 568px) {
-        h4 {
-    font-size:30px;
-    }
-}
+
 
 #postbody{
 	height: 500px;
@@ -22,6 +18,29 @@ body{
 	left: 0;
 	width:100%;
 	height: 60px;
+}
+.timecontainer{
+	width: 200px;
+	height: 20px;
+	float: left;
+}
+
+.votecontainer{
+	width: 70px;
+	height: 20px;
+	float: left;
+}
+
+@media screen and (max-width: 568px) {
+        h4 {
+    font-size:30px;
+    }
+    .votecontainer{
+    width:50px;
+    }
+    .timecontainer{
+    width:150px;
+    }
 }
 
 
